--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
 annotated-types==0.7.0
-anyio==4.9.0
+anyio==4.5.2
 cachetools==5.5.2
 certifi==2025.1.31
 charset-normalizer==3.4.1
-click==8.1.8
+exceptiongroup==1.2.2
 fastapi==0.115.12
 google-api-core==2.24.2
 google-auth==2.38.0
 google-cloud-core==2.4.3
 google-cloud-firestore==2.20.1
 googleapis-common-protos==1.69.2
-grpcio==1.71.0
-grpcio-status==1.71.0
+grpcio==1.70.0
+grpcio-status==1.70.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
@@ -23,16 +23,16 @@ pluggy==1.5.0
 proto-plus==1.26.1
 protobuf==5.29.4
 pyasn1==0.6.1
-pyasn1_modules==0.4.1
+pyasn1-modules==0.4.2
 pydantic==2.10.6
-pydantic_core==2.27.2
-PyJWT==2.10.1
+pydantic-core==2.27.2
+PyJWT==2.9.0
 pytest==8.3.5
-python-dotenv==1.1.0
+python-dotenv==1.0.1
 requests==2.32.3
 rsa==4.9
 sniffio==1.3.1
-starlette==0.46.1
-typing_extensions==4.13.0
-urllib3==2.3.0
-uvicorn==0.34.0
+starlette==0.44.0
+tomli==2.2.1
+typing-extensions==4.13.0
+urllib3==2.2.3
